Text search added

--- a/Client/src/Components/HomeComponets/FeaturedCategories/FeaturedCategories.css
+++ b/Client/src/Components/HomeComponets/FeaturedCategories/FeaturedCategories.css
@@ -1,6 +1,11 @@
 .category_card:hover .category_icon  {
     background-color: #ffd612;
 }
+
 .category_card:hover .category_name, .products_count  {
     color: white;
+}
+
+.category_card .products_count {
+    color: gray;
 }
